--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -7,10 +7,13 @@
 
     <div>
          {% for room in rooms %}
-
+        <span>@{{room.host.username}}</span>
+        
          <div>
              <h5>{{room.id}} --- <a  href="{% url 'room' room.id %}">{{room.name}}</a></h5>
          </div>
+         <small>{{room.topic.name}}</small>
+         <hr>
          {% endfor %}
 
     </div>
