--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -4,7 +4,7 @@
 <h1>Home Template</h1>
 
 <div>
-
+    <a href="{% url 'create-room' %}">Create Room</a>
     <div>
          {% for room in rooms %}
         <span>@{{room.host.username}}</span>
@@ -12,6 +12,8 @@
          <div>
              <h5>{{room.id}} --- <a  href="{% url 'room' room.id %}">{{room.name}}</a></h5>
          </div>
+         <a href="{% url 'update-room' room.id %}">Edit</a>
+         <a href="{% url 'delete-room' room.id %}">Delete</a>
          <small>{{room.topic.name}}</small>
          <hr>
          {% endfor %}
