--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,8 @@
 <a href="/">
     LOGO
 </a>
+
+<form action="{% url 'home' %}" method="GET">
+    <input type="text" name="q" placeholder="Search Rooms....">
+</form>
 <hr>
