added available rooms count

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -29,6 +29,7 @@
     <div>
         <div>
             <a href="{% url 'create-room' %}">Create Room</a>
+            <h5>{{room_count}} rooms available</h5>
             <div>
                  {% for room in rooms %}
                 <span>@{{room.host.username}}</span>
