--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+
+{% if page ==  'login' %}
 <div>
 <form action="" method="POST">
 
@@ -15,8 +17,24 @@
 
     <input type="submit" value="Login">
 </form>
-
+<p>Have not signed up yet?</p>
+<a href="{% url 'register' %}">Sign Up</a>
+ 
 </div>
+{% else %}
 
+<div>
+    <form action="" method="POST">
+    
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register">
+    </form>
+    <p>Already signed up?</p>
+    <a href="{% url 'login' %}">Login</a>
+    
+    </div>
+
+{% endif %}
 
 {% endblock content %}
