--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -1,6 +1,6 @@
 <div>
     {% for room in rooms %}
-   <span>@{{room.host.username}}</span>
+   <a href="{% url 'profile' room.host.id %}">@{{room.host.username}}</a>
    
     <div>
         <h5>{{room.id}} --- <a  href="{% url 'room' room.id %}">{{room.name}}</a></h5>
