--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
     <title>Django Tuto</title>
 </head>
 <body>
@@ -15,6 +19,8 @@
             {% endfor %}
         </ul>
     {% endif %}
+
+    
 
     {% block content %}
 
