--- a/templates/main.html
+++ b/templates/main.html
@@ -2,14 +2,17 @@
 {% load static %}
 
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/main.css' %}">
-    <title>Django Tuto</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <title>StudyBuddy - Find study partners around the world!</title>
+  </head>
+
+  <body>
+   
     {% include 'navbar.html' %}
 
     {% if messages %}
@@ -26,7 +29,12 @@
 
 
     {% endblock content %}
-
-    
-</body>
+    <script src="{% static 'js/script.js' %}"></script>
+  </body>
 </html>
+
+
+
+
+
+
